images folder out
ch1

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <nav role="navigation" aria-label="Main navigation">
         <div class="nav-container">
-            <div class="logo"><img src="images/logo new.png" alt=""></div>
+            <div class="logo"><img src="logo new.png" alt=""></div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -65,7 +65,7 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-container">
            <div class="profile-img">
-    <img src="images/fitness.png" alt="Ijaz Hussain">
+    <img src="fitness.png" alt="Ijaz Hussain">
 </div>
 
             <div class="about-text">
@@ -218,7 +218,7 @@ I deliver clean, maintainable code with pixel-perfect designs, accessible interf
         <div class="projects-grid">
             <div class="project-card" data-category="web">
                 <div class="project-img">
-                    <img src="images/gat.PNG" alt="E-Commerce Platform" class="project-thumb">
+                    <img src="gat.PNG" alt="E-Commerce Platform" class="project-thumb">
                 </div>
                 <div class="project-content">
     <h3 class="project-title">Geo Automation AI System</h3>
@@ -243,7 +243,7 @@ I deliver clean, maintainable code with pixel-perfect designs, accessible interf
 
             <div class="project-card" data-category="mobile">
                 <div class="project-img">
-                    <img src="images/appp.jpg" alt="Fitness Tracker App" class="project-thumb">
+                    <img src="appp.jpg" alt="Fitness Tracker App" class="project-thumb">
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Fitness Tracker App</h3>
@@ -262,7 +262,7 @@ I deliver clean, maintainable code with pixel-perfect designs, accessible interf
 
             <div class="project-card" data-category="web">
                 <div class="project-img">
-                    <img src="images/mml.png" alt="Restaurant Website" class="project-thumb">
+                    <img src="mml.png" alt="Restaurant Website" class="project-thumb">
                 </div>
                <div class="project-content">
     <h3 class="project-title">Masjid Website</h3>
@@ -286,7 +286,7 @@ I deliver clean, maintainable code with pixel-perfect designs, accessible interf
 
             <div class="project-card" data-category="ui">
                 <div class="project-img">
-                    <img src="images/bussiness.png" alt="Business Dashboard" class="project-thumb">
+                    <img src="bussiness.png" alt="Business Dashboard" class="project-thumb">
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Business Dashboard</h3>
@@ -305,7 +305,7 @@ I deliver clean, maintainable code with pixel-perfect designs, accessible interf
 
             <div class="project-card" data-category="web">
                 <div class="project-img">
-                    <img src="images/fitness.png" alt="Personal Blog Platform" class="project-thumb">
+                    <img src="fitness.png" alt="Personal Blog Platform" class="project-thumb">
                 </div>
                <div class="project-content">
     <h3 class="project-title">Quick Product Guide</h3>
@@ -424,3 +424,4 @@ I deliver clean, maintainable code with pixel-perfect designs, accessible interf
     <script src="script.js" defer></script>
 </body>
 </html>
+
