--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <div class="project-card" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="800" data-category="web">
                <div class="project-img">
                 <a href="https://gatevo.co.uk/" target="_blank" rel="noopener noreferrer" class="img-wrap">
-                    <img src="images/gat.PNG" alt="E-Commerce Platform" class="project-thumb">
+                    <img src="images/new laning page GatEvo 5th themee.PNG" alt="E-Commerce Platform" class="project-thumb">
                 </a>
             </div>
 
@@ -467,4 +467,5 @@
     <script src="script.js" defer></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
+
 </html>
